[metadata]
name = ktf
version = 0.0.1
description = Faithful Explanations in Convolutional Neural Networks for Case-Based Reasoning
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
zip_safe = False
packages=find:
install_requires =
    pandas
    h5py
    hydra-core
    numpy
    omegaconf
    pytorch_lightning
    torch
    torchmetrics
    opencv-python
    tensorboard
